Fix cog not visible with user dark theme

--- a/src/App.css
+++ b/src/App.css
@@ -509,6 +509,7 @@ input[type="range"] {
     transform: translateY(-50%);
     margin-left: 0px;
     font-size: 35px;
+    color: #666;
     cursor: pointer;
     opacity: 80%;
     text-decoration: none;
